# MBTI-in-Thoughts

./: LICENSE  README.md  pyproject.toml
config/: config_template.json
examples/: mortician.txt
priming/: priming_without_mention_of_mbti.json  priming_without_mention_of_mbti_different_none.json  priming_without_mention_of_mbti_different_none_with_altruistic_selfish.json
src/MBTITest/: README.md  mbti_test.csv  plot.py  test.py
src/MultiAgent-BenchmarkTasks/: README.md  create_plots.py  flows.py  hf_datasets.py  initialize_task_descriptions.py  prompt_help.py  run_big_bench_SOCKET.sh  run_experiment.py  solve_blackboard_independent.py  solve_blackboard_independent_scratchpad.py  solve_vote.py
src/MultiAgent-BenchmarkTasks/backers/: models.py
src/MultiAgent-BenchmarkTasks/data/: task_descriptions.json
src/MultiAgent-GameTheory/: main.py  models.py  node_helpers.py  plotting.py  run_all_games_on_mini.sh  run_games_mbti.py  run_mbti_prisonners_dilemma.sh
src/MultiAgent-GameTheory/games_structures/: base_game.py  battle_of_sexes.py  chicken.py  coordination.py  deadlock.py  generic.py  hawk_dove.py  prisonersdilemma.py  staghunt.py
src/WritingPrompt/: README.md  RedditEnhancedDataset.py  TopUpvotedStoriesDataset.py  TopUpvotedStoriesExample.py  TopUpvotedStoriesLoaderDataset.py  WritingPromptDataset.py  WritingPromptEnhancedDataset.py  __init__.py  clean_short_stories.py  evaluate_stories.py  evaluate_stories.sh  evaluators.py  plot.py  prompts.txt  story_generation.py  write_stories.py  write_stories.sh
